--- a/Mockup-Portfolio/index.html
+++ b/Mockup-Portfolio/index.html
@@ -65,7 +65,7 @@
             <img src="images/portfolio.png" class="img-responsive img-grid" alt="MusicGenie">
           </div>
           <footer class="text-feature">
-            <p><a href="#">Website Porfolio</a></p>
+            <p><a href="https://github.com/prthsharma753/Website-Portfolio">Website Porfolio</a></p>
           </footer>
         </div>
       </div>
