--- a/Mockup-Portfolio/index.html
+++ b/Mockup-Portfolio/index.html
@@ -6,7 +6,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <title>Portfolio</title>
     <link rel="stylesheet" href="css/bootstrap.css">
-    <link rel="stylesheet" media="screen and (max-width: 900px)" href="css/style.css">
+    <link rel="stylesheet" href="css/style.css">
     <link href='https://fonts.googleapis.com/css?family=Raleway:100,300,400,500' rel='stylesheet'>
     <script src="js/jquery-2.2.1.min.js"></script>
     <script src="js/bootstrap.min.js"></script>
@@ -42,32 +42,40 @@
 
             <!-- tiles for work -->
       <div class="row container-grid">
-        <div class ="row-feature">
+        <div class ="container row-feature">
           <div class="img-feature">
-            <img src="images/python.png" class="img-responsive img-grid" alt="Race the Car">
+            <img src="images/python.png" class="img-responsive img-grid" alt="Python Project">
           </div>
           <footer class="text-feature">
             <p><a href="#">Python Project</a>
             </p>
           </footer>
         </div>
-
-        <div class ="row-feature">
+        <div class ="container row-feature">
           <div class="img-feature">
-            <img src="images/Animal-Card.png" class="img-responsive img-grid" alt="Blog-Mockup">
+            <img src="images/Animal-Card.png" class="img-responsive img-grid" alt="Animal Info Card">
           </div>
           <footer class="text-feature">
             <p><a href="https://github.com/prthsharma753/Animal-Card">Animal Info Card</a></p>
           </footer>
         </div>
-        <div class ="row-feature">
+        <div class ="container row-feature">
           <div class="img-feature">
-            <img src="images/portfolio.png" class="img-responsive img-grid" alt="MusicGenie">
+            <img src="images/portfolio.png" class="img-responsive img-grid" alt="Website">
           </div>
           <footer class="text-feature">
-            <p><a href="https://github.com/prthsharma753/Website-Portfolio">Website Porfolio</a></p>
+            <p><a href="#">Website Porfolio</a></p>
+          </footer>
+        </div>
+        <div class ="container row-feature">
+          <div class="img-feature">
+            <img src="images/Data Science.png" class="img-responsive img-grid" alt="Data Analysis">
+          </div>
+          <footer class="text-feature">
+            <p><a href="#">US Bike Share Analysis</a></p>
           </footer>
         </div>
       </div>
-    </body>
+    </div>
+  </body>
 </html>
